--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,12 @@
+html, body {
+    height: 100%; /* Pastikan tinggi halaman penuh */
+    margin: 0;    /* Hilangkan margin default */
+    display: flex;
+    flex-direction: column;  /* Mengatur arah elemen dalam halaman secara vertikal */
+}
+
+
+/* Styling logo container */
 #logo {
     width: 100%;
     height: 100vh;
@@ -23,7 +32,9 @@
     font-size: 18px;
     font-weight: bold;
 }
-.login{
+
+/* Styling login container */
+.login {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -33,6 +44,7 @@
     text-align: center;
     color: black;
 }
+
 .login-container {
     width: 350px;
     padding: 20px;
@@ -45,6 +57,7 @@
     margin-bottom: 20px;
 }
 
+/* Styling label dan input form */
 label {
     display: block;
     text-align: left;
@@ -62,10 +75,12 @@ input[type="email"], input[type="password"] {
     font-size: 16px;
 }
 
+/* Fokus pada input */
 input[type="email"]:focus, input[type="password"]:focus {
     border-bottom: 2px solid #007bff;
 }
 
+/* Styling forgot password link */
 .forgot-password {
     text-align: right;
     font-size: 14px;
@@ -77,6 +92,7 @@ input[type="email"]:focus, input[type="password"]:focus {
     color: black;
 }
 
+/* Styling button */
 .btn-gradient {
     background: linear-gradient(to right, #007bff, #00c6ff);
     border: none;
@@ -90,38 +106,34 @@ input[type="email"]:focus, input[type="password"]:focus {
     font-size: 16px;
 }
 
+/* Hover effect untuk button */
 .btn-gradient:hover {
     opacity: 0.8;
 }
 
-        .navbar{background: linear-gradient(to right, #0275D8, #30BBB3);
-        }
-        #t{
-            margin-left: 400px;
-            text-align: justify;
-            color: aliceblue
-        }
-        .y{
-            background-color: #0275D8;
-        }
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        
-        .content {
-            flex: 1; /* Konten akan mengisi ruang kosong, mendorong footer ke bawah */
-        }
-        
-        footer {
-            background: linear-gradient(to right, #0275D8, #30BBB3);
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        
+/* Styling navbar */
+.navbar {
+    background: linear-gradient(to right, #0275D8, #30BBB3);
+}
+
+/* Styling navbar brand (logo) */
+#t {
+    margin-left: 400px;
+    text-align: justify;
+    color: aliceblue;
+}
+
+/* Styling navbar link (optional) */
+.y {
+    background-color: #0275D8;
+}
+
+/* Styling footer */
+footer {
+    background: linear-gradient(to right, #0275D8, #30BBB3);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    margin-top: auto;  /* Pastikan footer tetap di bawah */
+}
